removed api key and added operationId for some endpoints
