# gen/restapi/operations/fees/get_v2_data_platform_network_operations_avg_fees_responses.go
@@ -1,78 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package fees
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-)
-
-// GetV2DataPlatformNetworkOperationsAvgFeesOKCode is the HTTP code returned for type GetV2DataPlatformNetworkOperationsAvgFeesOK
-const GetV2DataPlatformNetworkOperationsAvgFeesOKCode int = 200
-
-/*GetV2DataPlatformNetworkOperationsAvgFeesOK Query compatibility endpoint for average fees
-
-swagger:response getV2DataPlatformNetworkOperationsAvgFeesOK
-*/
-type GetV2DataPlatformNetworkOperationsAvgFeesOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload string `json:"body,omitempty"`
-}
-
-// NewGetV2DataPlatformNetworkOperationsAvgFeesOK creates GetV2DataPlatformNetworkOperationsAvgFeesOK with default headers values
-func NewGetV2DataPlatformNetworkOperationsAvgFeesOK() *GetV2DataPlatformNetworkOperationsAvgFeesOK {
-
-	return &GetV2DataPlatformNetworkOperationsAvgFeesOK{}
-}
-
-// WithPayload adds the payload to the get v2 data platform network operations avg fees o k response
-func (o *GetV2DataPlatformNetworkOperationsAvgFeesOK) WithPayload(payload string) *GetV2DataPlatformNetworkOperationsAvgFeesOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get v2 data platform network operations avg fees o k response
-func (o *GetV2DataPlatformNetworkOperationsAvgFeesOK) SetPayload(payload string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetV2DataPlatformNetworkOperationsAvgFeesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
-
-// GetV2DataPlatformNetworkOperationsAvgFeesNotFoundCode is the HTTP code returned for type GetV2DataPlatformNetworkOperationsAvgFeesNotFound
-const GetV2DataPlatformNetworkOperationsAvgFeesNotFoundCode int = 404
-
-/*GetV2DataPlatformNetworkOperationsAvgFeesNotFound Not Found
-
-swagger:response getV2DataPlatformNetworkOperationsAvgFeesNotFound
-*/
-type GetV2DataPlatformNetworkOperationsAvgFeesNotFound struct {
-}
-
-// NewGetV2DataPlatformNetworkOperationsAvgFeesNotFound creates GetV2DataPlatformNetworkOperationsAvgFeesNotFound with default headers values
-func NewGetV2DataPlatformNetworkOperationsAvgFeesNotFound() *GetV2DataPlatformNetworkOperationsAvgFeesNotFound {
-
-	return &GetV2DataPlatformNetworkOperationsAvgFeesNotFound{}
-}
-
-// WriteResponse to the client
-func (o *GetV2DataPlatformNetworkOperationsAvgFeesNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(404)
-}
