# gen/restapi/operations/operations/get_v2_data_platform_network_operations_responses.go
@@ -1,83 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-)
-
-// GetV2DataPlatformNetworkOperationsOKCode is the HTTP code returned for type GetV2DataPlatformNetworkOperationsOK
-const GetV2DataPlatformNetworkOperationsOKCode int = 200
-
-/*GetV2DataPlatformNetworkOperationsOK Query compatibility endpoint for operations
-
-swagger:response getV2DataPlatformNetworkOperationsOK
-*/
-type GetV2DataPlatformNetworkOperationsOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload []string `json:"body,omitempty"`
-}
-
-// NewGetV2DataPlatformNetworkOperationsOK creates GetV2DataPlatformNetworkOperationsOK with default headers values
-func NewGetV2DataPlatformNetworkOperationsOK() *GetV2DataPlatformNetworkOperationsOK {
-
-	return &GetV2DataPlatformNetworkOperationsOK{}
-}
-
-// WithPayload adds the payload to the get v2 data platform network operations o k response
-func (o *GetV2DataPlatformNetworkOperationsOK) WithPayload(payload []string) *GetV2DataPlatformNetworkOperationsOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get v2 data platform network operations o k response
-func (o *GetV2DataPlatformNetworkOperationsOK) SetPayload(payload []string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetV2DataPlatformNetworkOperationsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if payload == nil {
-		// return empty array
-		payload = make([]string, 0, 50)
-	}
-
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
-
-// GetV2DataPlatformNetworkOperationsNotFoundCode is the HTTP code returned for type GetV2DataPlatformNetworkOperationsNotFound
-const GetV2DataPlatformNetworkOperationsNotFoundCode int = 404
-
-/*GetV2DataPlatformNetworkOperationsNotFound Not Found
-
-swagger:response getV2DataPlatformNetworkOperationsNotFound
-*/
-type GetV2DataPlatformNetworkOperationsNotFound struct {
-}
-
-// NewGetV2DataPlatformNetworkOperationsNotFound creates GetV2DataPlatformNetworkOperationsNotFound with default headers values
-func NewGetV2DataPlatformNetworkOperationsNotFound() *GetV2DataPlatformNetworkOperationsNotFound {
-
-	return &GetV2DataPlatformNetworkOperationsNotFound{}
-}
-
-// WriteResponse to the client
-func (o *GetV2DataPlatformNetworkOperationsNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(404)
-}
